fix stretch images

--- a/style.css
+++ b/style.css
@@ -209,6 +209,7 @@ body {
 .imgMiniRectangle {
   width: 100%;
   height: 60%;
+  object-fit: cover;
 }
 
 .card-content {
